@@ -5,11 +5,11 @@ envlist=py27,py26,py25,py24,py31,docs
 sdistsrc={distshare}/tox-*
 
 [testenv]
+indexserver=http://pypi.testrun.org
 changedir=tests
 commands=
   py.test --junitxml={envlogdir}/junit-{envname}.xml []
-deps=
-    {distshare}/py-*
+deps=pylib
 
 [testenv:docs]
 basepython=python
